Thu Oct  6 20:07:41 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Add recursive "make check" target.

Mon Oct  3 21:11:56 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: make install obey $(DESTDIR)

Thu Aug  4 03:40:24 1994  Tom Yu  (tlyu@dragons-lair)

	* configure.in: oops check for install

	* Makefile.in: make install fixes
